--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,8 @@
         "lib": [
             "ES2022"
         ],
-        "baseUrl": "."
+        "baseUrl": ".",
+        "types": ["node"]
     },
     "include": [
         "**/*.js",
